<resources>
    <string name="app_name">霸盟</string>
    <string name="home_account">账户</string>
    <string name="home_order">新建订单</string>
    <string name="home_info">客户信息</string>
    <string name="home_union">我的联盟</string>
    <string name="home_exchange">兑换审核</string>
    <string name="home_reward">奖励设置</string>
    <string name="home_groupinfo">集团资讯</string>
    <string name="text_more">更多 ></string>
    <string name="hint_username2">手机号码</string>
    <string name="hint_oldpws">请输入当前使用的密码</string>
    <string name="hint_newpws1">请设置6位数以上的新密码</string>
    <string name="hint_newpws2">请再次输入</string>
    <string name="hint_pwd2">登录密码</string>
    <string name="test_num">111111</string>
    <string name="test">dsadsdsadadsadsadsadsadasd</string>
    <string name="permission_baiduLocation_rationale">请求允许使用此设备的定位信息</string>
    <string name="permission_baiduLocation_denied">请允许设备使用定位功能</string>
    <string name="permission_baiduLocation_never_asked">定位权限将不再询问</string>

    <string name="permission_writefile_asked">请求写外部存储</string>
    <string name="permission_writefile_denied">请允许设备使用外部存储</string>
    <string name="permission_writefile_never_asked">外部存储将不再询问</string>

    <string name="permission_allow">允许</string>
    <string name="permission_dency">拒绝</string>
    <string name="navigate_home">首页</string>
    <string name="navigate_news">资讯</string>
    <string name="navigate_business">我的业务</string>
    <string name="navigate_account">我的账号</string>
    <string name="tab_mengzhu">盟主消息</string>
    <string name="tab_mengyou">盟友消息</string>

    <string name="noDeal">未成交</string>
    <string name="deal">已成交</string>
    <string name="backorder">退单</string>

    <string name="orderInvalid">已失效</string>
    <string name="noOrder">未生成订单</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="server_error">服务器开小差了</string>

</resources>
