<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/layBanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </LinearLayout>

    <LinearLayout
        android:background="#ffffff"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/layaccount"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@mipmap/zh"/>
            <TextView
                android:lines="1"
                android:textSize="@dimen/tabhost_text_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_account"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layneworder"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@mipmap/xjdd"/>
            <TextView
                android:lines="1"
                android:textSize="@dimen/tabhost_text_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_order"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layCustomer"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@mipmap/khxx"/>
            <TextView
                android:lines="1"
                android:textSize="@dimen/tabhost_text_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_info"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layally"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@mipmap/wdlm"/>
            <TextView
                android:lines="1"
                android:textSize="@dimen/tabhost_text_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_union"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layExchange"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@mipmap/dhsh"/>
            <TextView
                android:lines="1"
                android:textSize="@dimen/tabhost_text_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_exchange"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layReward"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@mipmap/jlsz"/>
            <TextView
                android:lines="1"
                android:textSize="@dimen/tabhost_text_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_reward"/>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layMore"
        android:orientation="horizontal"
        android:background="#FFFFFF"
        android:paddingLeft="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text= "@string/home_groupinfo"
            android:layout_width="wrap_content"
            android:textColor="#010101"
            android:textSize="16sp"
            android:paddingTop="5dp"
            android:paddingBottom="10dp"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/text_more"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_vertical"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

</LinearLayout>