<?xml version="1.0" encoding="utf-8"?>
<com.handmark.pulltorefresh.library.PullToRefreshScrollView
    android:id="@+id/homePullRefresh"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ptr="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    ptr:ptrAnimationStyle="flip"
    ptr:ptrMode="both">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/homeViewPager"
            android:background="@android:color/transparent"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:id="@+id/dot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="3dp"
                android:orientation="horizontal">
            </LinearLayout>
        </LinearLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/homeViewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
        </android.support.v4.view.ViewPager>
    </RelativeLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/ic_launcher"/>
            <TextView
                android:lines="1"
                android:textSize="@dimen/tabhost_text_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_account"/>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/ic_launcher"/>
            <TextView
                android:lines="1"
                android:textSize="@dimen/tabhost_text_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_order"/>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/ic_launcher"/>
            <TextView
                android:lines="1"
                android:textSize="@dimen/tabhost_text_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_info"/>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/ic_launcher"/>
            <TextView
                android:lines="1"
                android:textSize="@dimen/tabhost_text_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_union"/>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/ic_launcher"/>
            <TextView
                android:lines="1"
                android:textSize="@dimen/tabhost_text_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_exchange"/>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/ic_launcher"/>
            <TextView
                android:lines="1"
                android:textSize="@dimen/tabhost_text_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_reward"/>
        </LinearLayout>
    </LinearLayout>
    </LinearLayout>
    </com.handmark.pulltorefresh.library.PullToRefreshScrollView>