<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:cy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.account.ChangePswActivity"
    android:background="@color/white">
    <RelativeLayout
        android:id="@+id/titleLayoutL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <include
            layout="@layout/title_index"/>
    </RelativeLayout>
    <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="1px"-->
        <!--android:background="@color/line_gray"/>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@mipmap/icon_psw"/>
        <com.huotu.android.library.libedittext.EditText
            android:layout_margin="10dp"
            android:id="@+id/edt_oldpsw"
            cy:style="transparent"
            android:focusable="true"
            android:layout_gravity="center_vertical"
            android:focusableInTouchMode="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_oldpws"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLength="20"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_gray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <ImageView
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@mipmap/icon_psw"/>
        <com.huotu.android.library.libedittext.EditText
            android:layout_margin="10dp"
            android:id="@+id/edt_newpsw1"
            cy:style="transparent"
            android:focusable="true"
            android:layout_gravity="center_vertical"
            android:focusableInTouchMode="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_newpws1"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLength="20"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_gray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <ImageView
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@mipmap/icon_psw"/>
        <com.huotu.android.library.libedittext.EditText
            android:layout_margin="10dp"
            android:id="@+id/edt_newpsw2"
            cy:style="transparent"
            android:focusable="true"
            android:layout_gravity="center_vertical"
            android:focusableInTouchMode="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_newpws2"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLength="20"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <Button
        android:id="@+id/btn_commit"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="bottom"
        android:background="@drawable/btn_cancel"
        android:text="完成"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="40dp" />
    </LinearLayout>
</LinearLayout>
